--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -30,7 +30,21 @@
         <ion-item nav-clear menu-close style="opacity: 0.7">
           To do
         </ion-item>
+        <ion-item ng-repeat="item in items" nav-clear menu-close style="opacity: 0.7">
+          {{item.content}}
+        </ion-item>
       </ion-list>
+
     </ion-content>
+    <ion-footer-bar >
+      <!--<a href="#" style="width: 100%;height: 100%;">-->
+      <div class="col-50 col-offset-34">
+        <button class="button button-dark" ng-click="showPopup()">Generic</button>
+        <!--<i class="icon ion-plus button-large" style="color: #9E9E9E;margin-left: 5px;"></i>-->
+
+      </div>
+      <!--</a>-->
+
+    </ion-footer-bar>
   </ion-side-menu>
 </ion-side-menus>
