--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,50 +1,57 @@
 <ion-side-menus enable-menu-with-back-views="false">
-  <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
+    <ion-side-menu-content>
+        <ion-nav-bar class="bar-stable">
+            <ion-nav-back-button>
 
-      <ion-nav-buttons style="background-color: rgb(211, 47, 47)" side="left">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
-        </button>
-      </ion-nav-buttons>
-    </ion-nav-bar>
-    <ion-nav-view name="menuContent"></ion-nav-view>
-  </ion-side-menu-content>
+            </ion-nav-back-button>
 
-  <ion-side-menu side="left" style="background-image: url('img/06.jpg')">
-    <!--<ion-header-bar class="bar-stable" style="background-color: rgb(211, 47, 47)">-->
-      <!--<h1 class="title" style="color: #ffffff">Danh sách</h1>-->
-      <!---->
-    <!--</ion-header-bar>-->
+            <ion-nav-buttons style="background-color: rgb(211, 47, 47)" side="left">
+                <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+                </button>
+            </ion-nav-buttons>
+        </ion-nav-bar>
+        <ion-nav-view name="menuContent"></ion-nav-view>
+    </ion-side-menu-content>
 
-    <ion-content>
-      <ion-item nav-clear menu-close style=" color:#ffffff;background: rgba(0,0,0,0.32);">
-        <div class="row">
-          <div class="col-20"> <img src="img/logo.png" style="width:30px;height: 50px;"></div>
-          <div class="col-80"><h2 style="color: #ffffff;">Softer Source</h2></div>
+
+    <ion-side-menu on-drag-left="selectList()" side="left">
+        <!--<ion-header-bar class="bar-stable" style="background-color: rgb(211, 47, 47)">-->
+        <!--<h1 class="title" style="color: #ffffff">Danh sách</h1>-->
+
+        <!--</ion-header-bar>-->
+        <!--<div class="bar bar-header bar-height" style=" color:#ffffff;background: rgba(0,0,0,0.32);">-->
+        <div class="bar bar-header bar-height" style=" color:#ffffff;">
+            <div class="row" style="background-image: url('img/10.jpg')">
+                <div class="col-30"><img src="img/logo.png" style="width:30px;height: 50px;margin-right: 20px;"></div>
+                <div class="col-70">
+                    <h3 style="color: #ffffff;font-style: oblique;">Task Timer</h3>
+                    <h5 style="color: #ffffff;">This is product of Softer Source.</h5>
+                </div>
+            </div>
         </div>
-      </ion-item>
+        <ion-content overflow-scroll="true" class="content-height">
+            <ion-list>
+                <!--<ion-item nav-clear menu-close ng-click="selectTasks(dataList.id_List)" ng-repeat="dataList in dataLists">-->
+                <ion-item nav-clear menu-close ng-repeat="dataList in dataLists"
+                          href="#/app/tasks/{{dataList.id_List}}" on-hold="sheetShow(dataList.id_List)">
+                    <p class="text-center">{{dataList.name_List}}</p>
+                </ion-item>
+            </ion-list>
 
-      <ion-list style="opacity: 0.5">
-        <ion-item nav-clear menu-close style="opacity: 0.7">
-          To do
-        </ion-item>
-        <ion-item ng-repeat="item in items" nav-clear menu-close style="opacity: 0.7">
-          {{item.content}}
-        </ion-item>
-      </ion-list>
+        </ion-content>
 
-    </ion-content>
-    <ion-footer-bar >
-      <!--<a href="#" style="width: 100%;height: 100%;">-->
-      <div class="col-50 col-offset-34">
-        <button class="button button-dark" ng-click="showPopup()">Generic</button>
-        <!--<i class="icon ion-plus button-large" style="color: #9E9E9E;margin-left: 5px;"></i>-->
+        <ion-footer-bar>
+            <button class="button button-clear title" ng-click="showPopup()">
+                <i class=" ion-plus button-large" style="color: #9E9E9E"></i>
+            </button>
+            <!--<div class="title">-->
+            <!--<a href="#" style="width: 100%;height: 100%;" class="title" ng-click="showPopup()">-->
+            <!--<i class=" ion-plus button-large" style="color: #9E9E9E"></i>-->
+            <!--</a>-->
+            <!--</div>-->
 
-      </div>
-      <!--</a>-->
+        </ion-footer-bar>
 
-    </ion-footer-bar>
-  </ion-side-menu>
+
+    </ion-side-menu>
 </ion-side-menus>
